# llvmta

./: .clang-tidy  .gitignore  CMakeLists.txt  DEBUG_TYPES  LICENSE.TXT  README.md  README_zh.md  compile.sh  config.sh  doxygen.config  setup_env.sh
.devcontainer/: Dockerfile  Dockerfile.Arch  devcontainer.json
dependencies/: .gitignore
dependencies/patches/: clang-14.0.6.llvmta.diff  llvm-14.0.6.llvmta.diff
docs/: DEVELOP_zh.md  INSTALL.md  INSTALL_zh.md  USAGE.md  USAGE_zh.md
include/AnalysisFramework/: AnalysisDomain.h  AnalysisDriver.h  AnalysisInformation.h  AnalysisResults.h  CallGraph.h  CollectingContextsDomain.h  ContextAwareAnalysisDomain.h  GraphIterator.h  PartitioningDomain.h
include/LLVMPasses/: AsmDumpAndCheckPass.h  DispatchFixedLatency.h  DispatchInOrderPipeline.h  DispatchMemory.h  DispatchMuArchAnalysis.h  DispatchOutOfOrderPipeline.h  DispatchPathAnalysis.h  DispatchPretPipeline.h  MachineFunctionCollector.h  (+3 more)
lib/: CMakeLists.txt
lib/Memory/: AbstractCache.cpp  AbstractCyclingMemory.cpp  BlockingCyclingMemoryConfig.cpp  CMakeLists.txt  CacheUtils.cpp  Classification.cpp  FixedLatencyCyclingMemoryConfig.cpp  PersistenceScopeInfo.cpp  SimpleSDRAMCyclingMemory.cpp
lib/Memory/crpd/: CMakeLists.txt  CacheRelatedPreemptionDelay.cpp
llvmta/: llvmta.cpp
scripts/: README.md  README_zh.md
testcases/: GenLoopAnnotations  GenLoopAnnotations.md  README.txt  checkForAsserts  cleanBuildDirs  crtmemcgrp.sh  determineNeededCtx  eval  memlimitllvmta  quickGetBound.py  regressionTest  run.py  runBeforeGDB  runDebug  runTestcase  runllvmta.sh
(+336 files in other folders)
